# cs-xmas-quiz

./: .gitignore  .gitmodules  README.md
Buzzer/: buzzer.brd  buzzer.sch
Music/: Faster Than An Ambulance.m4a  New?.m4a
Pointless/: bronte.txt  roomtemp-elements.txt
Quiz Server/: .gitignore
Quiz Server/DDHidLib/: DDHidJoystick.m  DDHidKeyboard.m  DDHidKeyboardBarcodeScanner.m  DDHidLib.h  DDHidMouse.m  DDHidQueue.m  Info.plist
Quiz Server/DDHidLibTests/: DDHidLibTests.m  Info.plist
Quiz Server/Quiz Server/: AnniversaryNode.swift  AppDelegate.swift  BackgroundView.swift  Boggle.plist  BoggleScene.swift  BoggleSparks.sks  BoggleSparksBonus.sks  BuzzGlow.sks  BuzzParticles.sks  BuzzSparks.sks  BuzzerEffects.swift  BuzzerScene.swift  BuzzerTeamNode.swift  BuzzerView.xib  BuzzerViewController.swift  ClockNode.swift  ColorView.swift  ControllerWindow.xib  ControllerWindowController.swift  ControllerWindowController.xib  CustomLabels.swift  GeographyScene.swift  Idle2Scene.swift  IdleScene.swift  IdleView.xib  (+54 more)
Quiz Server/Quiz Server.xcodeproj/: project.pbxproj
Resources/: face.afphoto
Teensy/: Buzzer.ino  Test.ino
docs/: CNAME  index.html
nodeserver/: .gitignore  client.js  game.js  geo.js  index.html  package.json  quiz.crt  quiz.csr  quiz.ext  quiz.key  quizCA.key  quizCA.pem  quizCA.srl  server.js  style.css
quizleds/: platformio.ini
rpi2812/: quizleds.py
zynq_leds/: .gitignore  CMakeLists.txt
zynq_leds/include/: fast_hsv2rgb.h  ws2812.h
zynq_leds/libs/: CMakeLists.txt  ws2812.c
zynq_leds/tests/: CMakeLists.txt  hsvtest.c  ledtest.c  megamas.c
(+259 files in other folders)
